train and save single model - updated

--- a/notebooks/random_binary_function.ipynb
+++ b/notebooks/random_binary_function.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import random\n",
     "import pandas as pd"
    ]
@@ -240,12 +241,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "91896f01-8397-4380-bbf2-5a52c1752d16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = os.environ[\"user\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "id": "4c288140-4a3a-4b17-b01b-e3153a776bca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=\"/home/viderman/persistent_drive/pytorch-tensorfm/data/test-datasets/random_binary_function\""
+    "path=f\"/home/{user}/persistent_drive/pytorch-tensorfm/data/test-datasets/random_binary_function\""
    ]
   },
   {
