--- a/notebooks/triple_dataset_generator.ipynb
+++ b/notebooks/triple_dataset_generator.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
@@ -539,7 +540,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user = os.environ[\"user\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -547,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=\"/home/viderman/persistent_drive/pytorch-tensorfm/data/test-datasets/triple-dataset\""
+    "path=f\"/home/{user}/persistent_drive/pytorch-tensorfm/data/test-datasets/triple-dataset\""
    ]
   },
   {
