fix ranodm bimary func. notebook

--- a/notebooks/random_binary_function.ipynb
+++ b/notebooks/random_binary_function.ipynb
@@ -2,31 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "dc5f92d8-3da5-44f8-a3d3-36c0eadf3068",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import random\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "c6f7ea6f-5bf2-40be-930e-d445748d3978",
    "metadata": {},
    "outputs": [],
    "source": [
     "num_rows = 1000000\n",
-    "num_features = 20\n",
-    "col_names = [\"i\", \"j\", \"k\"]"
+    "num_features = 10\n",
+    "number_of_columns = 100\n",
+    "col_names = [\"i1\", \"i2\", \"i3\", \"i4\"] + [f\"i{n}\" for n in range(5,number_of_columns+1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "0c04a4ae-1d2d-42c7-860f-bc54886ab1e9",
    "metadata": {},
    "outputs": [],
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "e59a2b46-15b0-4867-9e00-52f91e708bd9",
    "metadata": {},
    "outputs": [],
@@ -55,19 +56,16 @@
     "hashtable = {}\n",
     "\n",
     "# Generate keys and assign random binary values\n",
-    "for i in range(num_features):\n",
-    "    for j in range(num_features, 2 * num_features):\n",
-    "        for k in range(2 * num_features, 3 * num_features):\n",
-    "            hashtable[(i, j, k)] = random.randint(0, 1)\n",
-    "\n",
-    "# # Print the hashtable\n",
-    "# for key, value in hashtable.items():\n",
-    "#     print(f\"{key}: {value}\")"
+    "for i1 in range(num_features):\n",
+    "    for i2 in range(num_features, 2 * num_features):\n",
+    "        for i3 in range(2 * num_features, 3 * num_features):\n",
+    "            for i4 in range(3 * num_features, 4 * num_features):\n",
+    "                hashtable[(i1, i2, i3, i4)] = random.randint(0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "116c542e-c1d1-42a5-974c-78bd828ba848",
    "metadata": {},
    "outputs": [
@@ -75,28 +73,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    i   j   k  label\n",
-      "0   8  21  53      0\n",
-      "1  14  28  59      0\n",
-      "2  18  32  55      0\n",
-      "3   2  37  53      1\n",
-      "4   0  28  45      0\n"
+      "   i1  i2  i3  i4  i5  i6  i7  i8  i9  i10  ...  i92  i93  i94  i95  i96  i97  \\\n",
+      "0   2  14  24  35  46  59  67  78  89   92  ...  914  927  937  949  950  966   \n",
+      "1   1  18  28  37  47  52  64  71  83   92  ...  913  924  931  946  953  965   \n",
+      "2   2  13  21  34  41  54  69  78  82   94  ...  910  922  931  948  959  960   \n",
+      "3   7  10  22  32  48  54  62  79  86   90  ...  912  924  930  940  956  965   \n",
+      "4   8  12  27  33  43  57  61  78  86   97  ...  919  927  939  942  952  969   \n",
+      "\n",
+      "   i98  i99  i100  label  \n",
+      "0  974  987   991      1  \n",
+      "1  971  984   991      0  \n",
+      "2  976  981   995      1  \n",
+      "3  979  985   991      0  \n",
+      "4  974  982   997      1  \n",
+      "\n",
+      "[5 rows x 101 columns]\n"
      ]
     }
    ],
    "source": [
-    "# Generate random values for i, j, k\n",
-    "data = {\n",
-    "    'i': [random.randint(0, num_features-1) for _ in range(num_rows)],\n",
-    "    'j': [random.randint(num_features, 2 * num_features-1) for _ in range(num_rows)],\n",
-    "    'k': [random.randint(2 * num_features, 3 * num_features-1) for _ in range(num_rows)]\n",
-    "}\n",
+    "num_indices = number_of_columns\n",
+    "\n",
+    "data = {}\n",
+    "for idx in range(num_indices):\n",
+    "    key = f'i{idx + 1}'  # i1, i2, i3, ..., i100\n",
+    "    data[key] = [random.randint(idx * num_features, (idx + 1) * num_features - 1) \n",
+    "                 for _ in range(num_rows)]\n",
     "\n",
     "# Create DataFrame\n",
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Add 'label' column based on hashtable\n",
-    "df['label'] = df.apply(lambda row: hashtable[(row['i'], row['j'], row['k'])], axis=1)\n",
+    "df['label'] = df.apply(lambda row: hashtable[(row['i1'], row['i2'], row['i3'], row['i4'])], axis=1)\n",
     "\n",
     "print(df.head())"
    ]
@@ -111,15 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "964981c2-c160-46ac-b325-6bdc0d66c3b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "1d180371-57f4-4e7b-bcb0-a29168886cdf",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6155ae20-8ee8-42f9-80ef-f74b3397ef6b",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1be27221-244c-440b-8594-c3f32c7fb0bc",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "3cd3efcc-6057-4ad1-af59-f15458ff67c5",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "6fb9cb8b-bc28-4559-8a0a-5ded73c1a643",
    "metadata": {},
    "outputs": [],
@@ -181,17 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "64015ac7-10a8-4f9f-95a7-20b8a4f06715",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6904104407011591"
+       "0.6912283063829319"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,17 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e68ec041-3d21-4b11-9ee5-a1a47a5862c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5483032637925953"
+       "0.5344221127393676"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,27 +241,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "91896f01-8397-4380-bbf2-5a52c1752d16",
+   "execution_count": 25,
+   "id": "b62b0efd-4a67-4f3e-82d4-f264fde4f393",
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = os.environ[\"user\"]"
+    "user = os.getenv(\"USER\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "4c288140-4a3a-4b17-b01b-e3153a776bca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=f\"/home/{user}/persistent_drive/pytorch-tensorfm/data/test-datasets/random_binary_function\""
+    "path=f\"/home/{user}/persistent_drive/pytorch-tensorfm/data/test-datasets/random_binary_function_4_100_cols\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "0d2edc44-7edd-483e-abbe-e6bc8b7fe1d5",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "595ef21e-1f2d-4a60-9ef5-5953729b8570",
    "metadata": {},
    "outputs": [],
@@ -281,13 +281,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "3f34ed35-bea6-4485-adc2-f45ed45e6655",
    "metadata": {},
    "outputs": [],
    "source": [
     "df[validation_st:validation_end].to_csv(f\"{path}/validation.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e568483-f70c-420d-86f6-a3c4c39503af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
