--- a/notebooks/inference_timing.ipynb
+++ b/notebooks/inference_timing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "ec0074bd-73ff-4dd4-95b3-fecf424a2a85",
    "metadata": {
     "ExecuteTime": {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "652cf89c-3e38-4532-8a99-ebc5764eb3fd",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "546d018967338407",
    "metadata": {
     "ExecuteTime": {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "0eb9aff6-341a-48f7-9434-bb174d7f44eb",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "b6496b1c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "74986625",
    "metadata": {},
    "outputs": [
@@ -486,6 +486,7 @@
     "%%cython\n",
     "#define NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION\n",
     "import numpy as np\n",
+    "cimport numpy as np\n",
     "cimport cython\n",
     "\n",
     "cdef class HOFM3ScoreSimulator:\n",
@@ -603,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "e5dca435",
    "metadata": {},
    "outputs": [],
@@ -710,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "a5c7147c",
    "metadata": {},
    "outputs": [],
@@ -798,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "id": "cb71307e177dbeaa",
    "metadata": {
     "ExecuteTime": {
@@ -819,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "id": "ea288325-6136-46bd-8c2f-6cb9997d25e1",
    "metadata": {},
    "outputs": [],
@@ -852,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "id": "b2a2516271b9bd1",
    "metadata": {
     "ExecuteTime": {
@@ -869,15 +870,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current ISO time: 2025-11-13T19:46:42.296264, rank = 1 order interactions = {order_interactions}\n",
-      "Current ISO time: 2025-11-13T19:46:42.412195, rank = 2 order interactions = {order_interactions}\n",
-      "Current ISO time: 2025-11-13T19:46:42.564219, rank = 4 order interactions = {order_interactions}\n",
-      "Current ISO time: 2025-11-13T19:46:42.849928, rank = 1 order interactions = {order_interactions}\n",
-      "Current ISO time: 2025-11-13T19:46:43.043909, rank = 2 order interactions = {order_interactions}\n",
-      "Current ISO time: 2025-11-13T19:46:43.411087, rank = 4 order interactions = {order_interactions}\n",
-      "Current ISO time: 2025-11-13T19:46:44.113731, rank = 1 order interactions = {order_interactions}\n",
-      "Current ISO time: 2025-11-13T19:46:44.454056, rank = 2 order interactions = {order_interactions}\n",
-      "Current ISO time: 2025-11-13T19:46:45.107596, rank = 4 order interactions = {order_interactions}\n"
+      "Current ISO time: 2026-02-12T23:20:35.078941, rank = 1 order interactions = {order_interactions}\n",
+      "Current ISO time: 2026-02-12T23:20:35.163486, rank = 2 order interactions = {order_interactions}\n",
+      "Current ISO time: 2026-02-12T23:20:35.316381, rank = 4 order interactions = {order_interactions}\n",
+      "Current ISO time: 2026-02-12T23:20:35.605749, rank = 1 order interactions = {order_interactions}\n",
+      "Current ISO time: 2026-02-12T23:20:35.804431, rank = 2 order interactions = {order_interactions}\n",
+      "Current ISO time: 2026-02-12T23:20:36.175293, rank = 4 order interactions = {order_interactions}\n",
+      "Current ISO time: 2026-02-12T23:20:36.931302, rank = 1 order interactions = {order_interactions}\n",
+      "Current ISO time: 2026-02-12T23:20:37.290157, rank = 2 order interactions = {order_interactions}\n",
+      "Current ISO time: 2026-02-12T23:20:37.981023, rank = 4 order interactions = {order_interactions}\n"
      ]
     }
    ],
@@ -896,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "id": "1bdf826c-812d-4923-95ae-0d9dd6c03729",
    "metadata": {},
    "outputs": [
@@ -904,7 +905,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current ISO time: 2025-11-13T19:46:46.404026\n"
+      "Current ISO time: 2026-02-12T23:20:39.317039\n"
      ]
     }
    ],
@@ -921,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "id": "59de8b7a",
    "metadata": {},
    "outputs": [
@@ -929,7 +930,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current ISO time: 2025-11-13T19:46:47.673175\n"
+      "Current ISO time: 2026-02-12T23:20:40.618582\n"
      ]
     }
    ],
@@ -945,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "id": "3cbc31bc",
    "metadata": {},
    "outputs": [
@@ -953,7 +954,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current ISO time: 2025-11-13T19:46:48.134126\n"
+      "Current ISO time: 2026-02-12T23:20:41.091930\n"
      ]
     }
    ],
@@ -969,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "id": "be131164",
    "metadata": {},
    "outputs": [
@@ -977,7 +978,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current ISO time: 2025-11-13T19:47:06.504424\n"
+      "Current ISO time: 2026-02-12T23:21:01.507124\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'HOFM3ScoreSimulator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCurrent ISO time: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(experiment_repeat):\n\u001b[0;32m----> 4\u001b[0m     sim_hofm \u001b[38;5;241m=\u001b[39m \u001b[43mHOFM3ScoreSimulator\u001b[49m(num_fields\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m,k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m Benchmark(results, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHOFM\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, score_count) \u001b[38;5;28;01mas\u001b[39;00m benchmark:\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(score_count):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'HOFM3ScoreSimulator' is not defined"
      ]
     }
    ],
@@ -993,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "95b88ffa020dd097",
    "metadata": {
     "ExecuteTime": {
@@ -1158,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "24d19212b210adf4",
    "metadata": {
     "ExecuteTime": {
